	PR lto/45959 	PR lto/45960 	* pt.c (tsubst_copy) [INTEGER_CST]: Instantiate the type.

git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@165306 138bc75d-0d04-0410-961f-82ee72b054a4